--- a/01-08-components-state-domEvents/index.html
+++ b/01-08-components-state-domEvents/index.html
@@ -15,11 +15,31 @@
 
     <script type="text/babel">
         class App extends React.Component {
+            state = {
+                name: 'Joey',
+                age: 30
+            }
+            handleClick = (e) => {
+                // console.log(e.target);
+                this.setState({
+                    name: 'Natalie'
+                });
+                console.log(this.state);
+            }
+            handleMouseOver = (e) => {
+                console.log(e.target, e.pageX);
+            }
+            handleCopy = (e) => {
+                console.log('Try being original for once!');
+            }
             render() {
                 return (
                     <div className="app-content">
                         <h1>Hey, mates!</h1>
-                        <p>{ Math.random() * 10 }</p>                        
+                        <p>My name is { this.state.name } and I am { this.state.age }</p>
+                        <button onClick={ this.handleClick }>Click Me</button>  
+                        <button onMouseOver={ this.handleMouseOver }>Hover Me</button>  
+                        <p onCopy={ this.handleCopy }>What we think, we become.</p>                                           
                     </div>
                 )
             }
